# bevy-game

./: Cargo.toml
assets/: monkey.gltf
src/: camera.rs  main.rs
