[package]
name = "first"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "f38a6e670bd950cedbad172bb3a17e82aebcc154", features = ["dynamic"] } # remove dynamic on release